Mood Report - ability to display a single user's mood avatars, link to this page from Profile/Settings

--- a/TASVideos/Pages/Profile/Settings.cshtml
+++ b/TASVideos/Pages/Profile/Settings.cshtml
@@ -133,6 +133,7 @@
 		<column md="6">
 			<label asp-for="Settings.MoodAvatar"></label>
 			<input type="text" asp-for="Settings.MoodAvatar" class="form-control" />
+			<a asp-page="/Forum/MoodReport" asp-route-username="@Model.Settings.Username">Check Mood Avatars</a>
 		</column>
 		<column md="6">
 			<small>
