silence some new NRE warnings, apparently, even if you declare a partial view model as not nullable, it still thinks it can be null

--- a/TASVideos/Pages/Shared/_PublicationHistory.cshtml
+++ b/TASVideos/Pages/Shared/_PublicationHistory.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PublicationHistoryGroup
 
-@foreach (var node in Model.Branches.OrderBy(b => string.IsNullOrWhiteSpace(b.Branch)))
+@foreach (var node in Model!.Branches.OrderBy(b => string.IsNullOrWhiteSpace(b.Branch)))
 {
 	var highlight = node.Id == (int?)ViewData["Highlight"] ? ViewData["HighlightClass"] : "";
 	<div class="mb-4">
