view components now trigger NRE nags for model, rather than check for model being null, put a bunch of ! everywhere, annoying.  It is a known issue they will fix eventually

--- a/TASVideos/Pages/Forum/Topics/_TopicCrumbs.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicCrumbs.cshtml
@@ -3,5 +3,5 @@
 <h4 class="pt-1 pb-2">
 	<a asp-page="/Forum/Index">Forum</a>
 	→
-	<a asp-page="/Forum/Subforum/Index" asp-route-id="@Model.ForumId">@Model.ForumName</a>
+	<a asp-page="/Forum/Subforum/Index" asp-route-id="@Model!.ForumId">@Model.ForumName</a>
 </h4>
