--- a/TASVideos/Pages/Shared/Components/MovieChangeLog/Seed.cshtml
+++ b/TASVideos/Pages/Shared/Components/MovieChangeLog/Seed.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PublicationHistoryGroup
 @{
-	ViewData["Highlight"] = (int?)null; // TODO
+	ViewData["Highlight"] = null; // TODO
 	ViewData["HighlightClass"] = "fw-bold fst-italic border border-info p-1";
 }
 @section PageTitle {
