--- a/TASVideos/Pages/Publications/Rate.cshtml
+++ b/TASVideos/Pages/Publications/Rate.cshtml
@@ -18,43 +18,48 @@
 				<input asp-for="Rating.EntertainmentRating" type="number" class="form-control fs-4 d-inline-block" style="width:4em;" min="0" max="10" value="@Model.Rating.EntertainmentRating" step="0.1" />
 				<input id="entertainmentSlider" type="range" class="form-range mw-100 h-auto" style="width:15rem;" min="0" max="10" value="@Model.Rating.EntertainmentRating" step="0.1" />
 			</form-group>
-			<form-group>
-				<span class="fs-4">@Html.DisplayNameFor(m => m.Rating.TechRating)</span>
-				<span class="text-nowrap">
-					( <input asp-for="Rating.TechUnrated" />
-					<label asp-for="Rating.TechUnrated">Unrated</label> )
-				</span>
-				<br />
-				<input asp-for="Rating.TechRating" type="number" class="form-control fs-4 d-inline-block" style="width:4em;" min="0" max="10" value="@Model.Rating.TechRating" step="0.1" />
-				<input id="techSlider" type="range" class="form-range mw-100 h-auto" style="width:15rem;" min="0" max="10" value="@Model.Rating.TechRating" step="0.1" />
-			</form-group>
 		</div>
 		<script>
-			function ratingConnect(checkbox, textbox, slider)
-			{
+			function disableSubmit() {
+				const btn = document.getElementById("submit-btn");
+				btn.classList.add("disabled");
+				btn.disabled = true;
+				btn.setAttribute("aria-disabled", true);
+			}
+
+			function enableSubmit() {
+				const btn = document.getElementById("submit-btn");
+				btn.classList.remove("disabled");
+				btn.disabled = false;
+				btn.removeAttribute("aria-disabled");
+			}
+
+			function ratingConnect(checkbox, textbox, slider) {
 				checkbox.onchange = function () {
 					if (checkbox.checked) {
 						textbox.value = '';
+						disableSubmit();
 					}
 				};
 				textbox.oninput = function () {
 					slider.value = textbox.value;
 					checkbox.checked = false;
+					enableSubmit();
 				};
 				slider.oninput = function () {
 					slider.value = Math.round(Number(this.value) * 2) / 2;
 					textbox.value = slider.value;
 					checkbox.checked = false;
+					enableSubmit();
 				};
 			}
 			ratingConnect(document.getElementById('Rating_EntertainmentUnrated'), document.getElementById('Rating_EntertainmentRating'), document.getElementById('entertainmentSlider'));
-			ratingConnect(document.getElementById('Rating_TechUnrated'), document.getElementById('Rating_TechRating'), document.getElementById('techSlider'));
 		</script>
 	</row>
 	<row>
 	</row>
 	<form-button-bar>
-		<button type="submit" class="btn btn-primary"><span class="fa fa-save"></span> Rate</button>
+		<button disable="@Model.Rating.EntertainmentRating == null" type="submit" class="btn btn-primary" id="submit-btn"><span class="fa fa-save"></span> Rate</button>
 		<a asp-page="/Publications/View" asp-route-id="@Model.Id" class="btn btn-secondary"><span class="fa fa-arrow-left"></span> Back to Publication</a>
 	</form-button-bar>
 </form>
