--- a/TASVideos/Pages/Publications/Rate.cshtml
+++ b/TASVideos/Pages/Publications/Rate.cshtml
@@ -9,14 +9,14 @@
 	<row>
 		<div class="col-12 text-center text-md-start">
 			<form-group>
-				<span class="fs-4">@Html.DisplayNameFor(m => m.Rating.EntertainmentRating)</span>
+				<span class="fs-4">@Html.DisplayNameFor(m => m.Rating.Rating)</span>
 				<span class="text-nowrap">
-					( <input asp-for="Rating.EntertainmentUnrated" />
-					<label asp-for="Rating.EntertainmentUnrated">Unrated</label> )
+					( <input asp-for="Rating.Unrated" />
+					<label asp-for="Rating.Unrated">Unrated</label> )
 				</span>
 				<br />
-				<input asp-for="Rating.EntertainmentRating" type="number" class="form-control fs-4 d-inline-block" style="width:4em;" min="0" max="10" value="@Model.Rating.EntertainmentRating" step="0.1" />
-				<input id="entertainmentSlider" type="range" class="form-range mw-100 h-auto" style="width:15rem;" min="0" max="10" value="@Model.Rating.EntertainmentRating" step="0.1" />
+				<input asp-for="Rating.Rating" type="number" class="form-control fs-4 d-inline-block" style="width:4em;" min="0" max="10" value="@Model.Rating.Rating" step="0.1" />
+				<input id="entertainmentSlider" type="range" class="form-range mw-100 h-auto" style="width:15rem;" min="0" max="10" value="@Model.Rating.Rating" step="0.1" />
 			</form-group>
 		</div>
 		<script>
@@ -53,13 +53,13 @@
 					enableSubmit();
 				};
 			}
-			ratingConnect(document.getElementById('Rating_EntertainmentUnrated'), document.getElementById('Rating_EntertainmentRating'), document.getElementById('entertainmentSlider'));
+			ratingConnect(document.getElementById('Rating_Unrated'), document.getElementById('Rating_Rating'), document.getElementById('entertainmentSlider'));
 		</script>
 	</row>
 	<row>
 	</row>
 	<form-button-bar>
-		<button disable="@Model.Rating.EntertainmentRating == null" type="submit" class="btn btn-primary" id="submit-btn"><span class="fa fa-save"></span> Rate</button>
+		<button disable="@Model.Rating.Rating == null" type="submit" class="btn btn-primary" id="submit-btn"><span class="fa fa-save"></span> Rate</button>
 		<a asp-page="/Publications/View" asp-route-id="@Model.Id" class="btn btn-secondary"><span class="fa fa-arrow-left"></span> Back to Publication</a>
 	</form-button-bar>
 </form>
