--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -14,6 +14,24 @@
 	var publicationAwards = await _awards.ForPublication(Model.Id);
 }
 
+@functions{
+	static string RegionDisplay(string? region)
+	{
+		if (string.IsNullOrWhiteSpace(region))
+		{
+			return "";
+		}
+
+		return region switch
+		{
+			"J" => "(JPN)",
+			"E" => "(Europe)",
+			"EU" => "(USA/Europe)",
+			_ => ""
+		};
+	}
+}
+
 <card class="border border-primary">
 	<cardheader class="bg-cardprimary p-2">
 		<div class="gx-3 clearfix">
@@ -32,7 +50,9 @@
 				}
 			</div>
 			<h4>
-				<a asp-page="/Publications/View" asp-route-id="@Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title </span></a>
+				<a asp-page="/Publications/View" asp-route-id="@Model.Id" class="text-decoration-none"><span class="text-dark">
+					<small condition="!string.IsNullOrWhiteSpace(Model.Region)">@RegionDisplay(Model.Region)</small> @Model.Title
+				</span></a>
 			</h4>
 		</div>
 	</cardheader>
