--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -24,7 +24,7 @@
 
 		return region switch
 		{
-			"J" => "(JPN)",
+			"J" => "(Japan)",
 			"E" => "(Europe)",
 			"EU" => "(USA/Europe)",
 			_ => ""
