--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -19,7 +19,7 @@
 	{
 		return string.IsNullOrWhiteSpace(version)
 			? ""
-			: $"v{version}";
+			: version;
 	}
 
 	static string RegionDisplay(string? region)
