having fun yet?

--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -27,6 +27,11 @@
 			return version ?? "";
 		}
 
+		if (string.IsNullOrWhiteSpace(version))
+		{
+			return RegionDisplay(region);
+		}
+
 		return $"{RegionDisplay(region)}, {version}";
 	}
 
