Fix non-red button undeletes, fixes #915 again

--- a/TASVideos/Pages/Wiki/DeletedPages.cshtml
+++ b/TASVideos/Pages/Wiki/DeletedPages.cshtml
@@ -29,6 +29,7 @@
 							Undelete
 						</delete-button>
 						<form method="post" asp-page="/Wiki/DeletedPages" asp-page-handler="Undelete">
+							<input type="hidden" name="path" value="@item.PageName" />
 							<button type="submit" class="btn btn-primary">Undelete</button>
 						</form>
 					}
