--- a/TASVideos/Pages/Forum/Topics/Index.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "{id}"
+@using TASVideos.Core
 @using TASVideos.Data.Helpers
 @model IndexModel
 @{
@@ -155,3 +156,18 @@
 		</ol>
 	</nav>
 </fullrow>
+
+<script condition="@(Model.Topic.Posts.Last().CreateTimestamp > DateTime.UtcNow.AddDays(-14) && Model.Topic.Posts.CurrentPage == Model.Topic.Posts.LastPage())">
+    {
+        let topicId = '@Model.Id';
+        let currentTime = Math.floor(Date.now() / 1000);
+        let visitedTopics = localStorage.getItem('visitedTopics');
+        if (visitedTopics !== null){
+            visitedTopics = JSON.parse(visitedTopics);
+            visitedTopics[topicId] = currentTime;
+        }else{
+            visitedTopics = {[topicId]: currentTime};
+        }
+        localStorage.setItem('visitedTopics', JSON.stringify(visitedTopics));
+    }
+</script>
