--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -34,6 +34,7 @@
 					<span condition="@(topic.Type == ForumTopicType.Announcement)" class="fw-bold text-warning"><i class="fa fa-bullhorn"></i> Announcement: </span>
 					<span condition="@(topic.Type == ForumTopicType.Sticky)" class="fw-bold text-info"><i class="fa fa-sticky-note"></i> Sticky: </span>
 					<span condition="@topic.IsLocked" class="text-danger"><i class="fa fa-lock"></i></span>
+					<span condition="@(Model.ActivityTopics.ContainsKey(topic.Id))"><i class="fa fa-file text-warning activity-topic" data-topic-id="@topic.Id" data-activity-unix="@(((DateTimeOffset)DateTime.SpecifyKind(Model.ActivityTopics[topic.Id],DateTimeKind.Utc)).ToUnixTimeSeconds())"></i></span>
 					<a asp-page="/Forum/Topics/Index" asp-route-id="@topic.Id" class="fw-bold">@topic.Title</a>
 					<div class="ms-2">
 						@{
@@ -76,5 +77,22 @@
 		}
 	</table>
 </div>
+
+<script>
+	{
+        let visitedTopics = localStorage.getItem('visitedTopics');
+        if (visitedTopics !== null){
+            visitedTopics = JSON.parse(visitedTopics);
+            let activityTopics = document.getElementsByClassName('activity-topic');
+            for (let i = activityTopics.length - 1; i >= 0; i--){
+                let activityTopic = activityTopics[i];
+                let lastVisit = visitedTopics[activityTopic.dataset.topicId];
+                if (lastVisit !== undefined && activityTopic.dataset.activityUnix < lastVisit){
+                    activityTopic.remove();
+                }
+            }
+        }
+    }
+</script>
 
 <partial name="_Pager" model="Model.Forum.Topics" />
