--- a/TASVideos/Pages/Forum/Topics/Index.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Index.cshtml
@@ -161,13 +161,13 @@
     {
         let topicId = '@Model.Id';
         let currentTime = Math.floor(Date.now() / 1000);
-        let visitedTopics = localStorage.getItem('visitedTopics');
+        let visitedTopics = localStorage.getItem('VisitedTopics');
         if (visitedTopics !== null){
             visitedTopics = JSON.parse(visitedTopics);
             visitedTopics[topicId] = currentTime;
         }else{
             visitedTopics = {[topicId]: currentTime};
         }
-        localStorage.setItem('visitedTopics', JSON.stringify(visitedTopics));
+        localStorage.setItem('VisitedTopics', JSON.stringify(visitedTopics));
     }
 </script>
