--- a/TASVideos/Pages/Forum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Index.cshtml
@@ -16,6 +16,9 @@
 		<a asp-page="/Forum/Posts/Unanswered" class="btn btn-secondary btn-sm">
 			Unanswered Posts
 		</a>
+		<a class="btn btn-secondary btn-sm" onclick="markAllPostsRead()">
+			Mark all Posts as read
+		</a>
 	</div>
 </div>
 <div class="clearfix flex-wrap d-flex d-md-block">
@@ -27,13 +30,13 @@
 	}
 </div>
 <script>
+    let currentTime = Math.floor(Date.now() / 1000);
     {
-        let visitedTopics = localStorage.getItem('visitedTopics');
+        let visitedTopics = localStorage.getItem('VisitedTopics');
         if (visitedTopics !== null){
             visitedTopics = JSON.parse(visitedTopics);
             let activitySubforums = document.getElementsByClassName('activity-subforum');
-            for (let i = activitySubforums.length - 1; i >= 0; i--){
-                let activityTopic = activitySubforums[i];
+            for (let activityTopic of activitySubforums){
                 let activityJson = JSON.parse(activityTopic.dataset.activityJson);
                 let removal = true;
                 for (let topicId in activityJson){
@@ -44,9 +47,21 @@
                     }
                 }
                 if (removal){
-                    activityTopic.remove();
+                    activityTopic.classList.add('d-none');
                 }
             }
         }
+    }
+    function markAllPostsRead(){
+        let visitedTopics = {};
+        let activitySubforums = document.getElementsByClassName('activity-subforum');
+        for (let activityTopic of activitySubforums){
+            let activityJson = JSON.parse(activityTopic.dataset.activityJson);
+            for (let topicId in activityJson){
+                visitedTopics[topicId] = currentTime;
+            }
+        }
+        localStorage.setItem('VisitedTopics', JSON.stringify(visitedTopics));
+        location.reload();
     }
 </script>
