--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -34,6 +34,7 @@
 					<span condition="@(topic.Type == ForumTopicType.Announcement)" class="fw-bold text-warning"><i class="fa fa-bullhorn"></i> Announcement: </span>
 					<span condition="@(topic.Type == ForumTopicType.Sticky)" class="fw-bold text-info"><i class="fa fa-sticky-note"></i> Sticky: </span>
 					<span condition="@topic.IsLocked" class="text-danger"><i class="fa fa-lock"></i></span>
+					<span condition="@(Model.ActivityTopics.ContainsKey(topic.Id))"><i class="fa fa-file text-warning activity-topic d-none" data-topic-id="@topic.Id" data-activity-unix="@(Model.ActivityTopics[topic.Id].UnixTimestamp())"></i></span>
 					<a asp-page="/Forum/Topics/Index" asp-route-id="@topic.Id" class="fw-bold">@topic.Title</a>
 					<div class="ms-2">
 						@{
@@ -76,5 +77,23 @@
 		}
 	</table>
 </div>
+
+<script>
+	{
+		let visitedTopics = localStorage.getItem('VisitedTopics');
+		if (visitedTopics !== null){
+			visitedTopics = JSON.parse(visitedTopics);
+		}else{
+			visitedTopics = {};
+		}
+		let activityTopics = document.getElementsByClassName('activity-topic');
+		for (let activityTopic of activityTopics){
+			let lastVisit = visitedTopics[activityTopic.dataset.topicId];
+			if (lastVisit === undefined || lastVisit < activityTopic.dataset.activityUnix){
+				activityTopic.classList.remove('d-none');
+			}
+		}
+	}
+</script>
 
 <partial name="_Pager" model="Model.Forum.Topics" />
