fix logout button style being off

--- a/TASVideos/Pages/Shared/_LoginPartial.cshtml
+++ b/TASVideos/Pages/Shared/_LoginPartial.cshtml
@@ -27,7 +27,7 @@
 					</a>
 				</nav-item>
 				<nav-item>
-					<button id="Logout" type="submit" class="btn btn-link navbar-btn nav-link text-nowrap"><i class="fa fa-sign-out"></i> Log out</button>
+					<button id="Logout" type="submit" class="btn btn-link navbar-btn nav-link text-nowrap fs-6 border-0"><i class="fa fa-sign-out"></i> Log out</button>
 				</nav-item>
 				<nav-item activate="Search">
 					<a id="Search" class="nav-link text-nowrap" asp-page="/Search/Index"><i class="fa fa-search"></i> Search</a>
