--- a/TASVideos/Pages/Wiki/PageHistory.cshtml
+++ b/TASVideos/Pages/Wiki/PageHistory.cshtml
@@ -130,26 +130,15 @@
 
 	function generateDiff(viewType) {
 		const diffView = document.getElementById("diff-view");
-		const base = difflib.stringAsLines(document.getElementById("left-revision").value),
-			newTxt = difflib.stringAsLines(document.getElementById("right-revision").value),
-			opcodes = new difflib.SequenceMatcher(base, newTxt).get_opcodes(),
+		const base = document.getElementById("left-revision").value,
+			newTxt = document.getElementById("right-revision").value,
 			diffOutputDiv = diffView;
 
-		diffOutputDiv.innerHTML = "";
-
-		diffOutputDiv.appendChild(diffview.buildView({
-			baseTextLines: base,
-			newTextLines: newTxt,
-			opcodes: opcodes,
-			baseTextName: "r" + fromRevision,
-			newTextName: "r" + toRevision,
-			contextSize: 5,
-			viewType: viewType
-		}));
+		renderDiff({ text: base }, { text: newTxt }, diffOutputDiv, !!viewType);
 	}
 </script>
 
 @section Scripts {
-	<script src="~/js/difflib.js"></script>
-	<script src="~/js/diffview.js"></script>
+	<script src="~/js/diff_match_patch.js"></script>
+	<script src="~/js/diff_view.js"></script>
 }
