--- a/TASVideos/Pages/Wiki/Diff.cshtml
+++ b/TASVideos/Pages/Wiki/Diff.cshtml
@@ -41,24 +41,16 @@
 		const rightMarkup = document.getElementById('@Html.IdFor(m => m.Diff.RightMarkup)').value;
 		const diffElem = document.getElementById('ResultMarkup');
 
-		const base = difflib.stringAsLines(leftMarkup);
-		const newTxt = difflib.stringAsLines(rightMarkup);
-		const opcodes = new difflib.SequenceMatcher(base, newTxt).get_opcodes();
-		diffElem.innerHTML = "";
-
-		diffElem.appendChild(diffview.buildView({
-			baseTextLines: base,
-			newTextLines: newTxt,
-			opcodes: opcodes,
-			baseTextName:  "r@(Model.Diff.LeftRevision)",
-			newTextName: "r@(Model.Diff.RightRevision)",
-			contextSize: 5,
-			viewType: viewType
-		}));
+		renderDiff(
+			{ text: leftMarkup, name: "r@(Model.Diff.LeftRevision)" },
+			{ text: rightMarkup, name: "r@(Model.Diff.RightRevision)" },
+			diffElem,
+			!!viewType
+		);
 	}
 </script>
 
 @section Scripts {
-	<script src="~/js/difflib.js"></script>
-	<script src="~/js/diffview.js"></script>
+	<script src="~/js/diff_match_patch.js"></script>
+	<script src="~/js/diff_view.js"></script>
 }
