--- a/TASVideos/Pages/Account/Register.cshtml
+++ b/TASVideos/Pages/Account/Register.cshtml
@@ -66,13 +66,8 @@
 </form>
 <script>
 	{
-		let selected = document.querySelector('#@nameof(Model.SelectedTimeZone) optgroup option:checked');
-		selected.removeAttribute('selected');
-
 		const timezoneOffset = 0 - new Date().getTimezoneOffset();
-		let timezone = Array.from(document.querySelectorAll('#@nameof(Model.SelectedTimeZone) optgroup option'))
-			.filter(option => option.getAttribute('data-offset') == timezoneOffset)[0];
-
+		let timezone = document.querySelector(`[data-offset="${timezoneOffset}"]`);
 		timezone.setAttribute('selected', 'selected');
 	}
 </script>
